--- a/src/app/theme/layout/shopping/shopping.component.html
+++ b/src/app/theme/layout/shopping/shopping.component.html
@@ -1,9 +1,7 @@
 <nz-layout class="app-layout">
     <nz-layout>
         <nz-header>
-            <div class="app-header">
-                <img src="../../../../assets/images/hero_2.svg" alt="shopping" height="60px">
-            </div>
+            <app-header></app-header>
         </nz-header>
         <nz-content>
             <div class="inner-content">
