--- a/src/app/theme/layout/shopping/shopping.component.scss
+++ b/src/app/theme/layout/shopping/shopping.component.scss
@@ -21,7 +21,8 @@ nz-header {
   background: #fff;
   box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
   height: 64px;
-  padding: 0;
+  // justify-content: space-between;
+  padding: 24px;
   position: relative;
 }
 
@@ -30,7 +31,7 @@ nz-content {
 }
 
 .inner-content {
-  padding: 24px;
   background: #fff;
   height: 100%;
+  padding: 24px;
 }
