--- a/src/app/theme/layout/shopping/shopping.component.html
+++ b/src/app/theme/layout/shopping/shopping.component.html
@@ -1,12 +1,11 @@
 <nz-layout class="app-layout">
-    <nz-layout>
-        <nz-header>
-            <app-header></app-header>
-        </nz-header>
-        <nz-content>
-            <div class="inner-content">
-                <router-outlet></router-outlet>
-            </div>
-        </nz-content>
-    </nz-layout>
+    <nz-header>
+        <app-header></app-header>
+    </nz-header>
+    <nz-content>
+        <div class="inner-content">
+            <router-outlet></router-outlet>
+        </div>
+    </nz-content>
+    <nz-footer>Ant Design ©2020 Implement By Angular</nz-footer>
 </nz-layout>
