--- a/src/app/theme/shared/components/header/header.component.scss
+++ b/src/app/theme/shared/components/header/header.component.scss
@@ -8,3 +8,12 @@
   padding: 24px;
   position: relative;
 }
+
+.menu-button {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  i {
+    margin-right: 5px;
+  }
+}
