--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,4 +3,10 @@
 
 // Colors
 
-$primary: #47a359;
+.ant-btn-primary {
+  color: #fff;
+  background: #47a359;
+  border-color: #47a359;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.12);
+  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045);
+}
