--- a/src/app/theme/shared/components/header/header.component.scss
+++ b/src/app/theme/shared/components/header/header.component.scss
@@ -4,9 +4,11 @@
   background: #fff;
   box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
   height: 64px;
-  // justify-content: space-between;
   padding: 24px;
   position: relative;
+  img {
+    height: 60px;
+  }
 }
 
 .menu-button {
