--- a/src/app/theme/shared/components/register/register.component.scss
+++ b/src/app/theme/shared/components/register/register.component.scss
@@ -10,7 +10,7 @@ nz-content {
   display: flex;
 }
 
-.login-form {
+.register-form {
   cursor: default;
   h2:first-child {
     margin-bottom: 0;
