--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -2,7 +2,7 @@
 <nz-list nzItemLayout="vertical" [nzLoading]="!products" nzGrid>
     <div nz-row [nzGutter]="16" style="justify-content: space-around;">
         <div nz-col [nzXXl]="4" [nzXl]="5" [nzLg]="6" [nzMd]="8" [nzSm]="12" [nzXs]="24"
-            *ngFor="let product of products">
+            *ngFor="let product of products; trackBy: trackByFn">
             <nz-list-item>
                 <app-product-item [product]="product"></app-product-item>
             </nz-list-item>
