products in cart

--- a/src/app/theme/shared/components/header/header.component.html
+++ b/src/app/theme/shared/components/header/header.component.html
@@ -8,7 +8,8 @@
             <nz-avatar nzIcon="shopping-cart" [nzShape]="'square'"></nz-avatar>
         </a>
     </nz-badge>
-    <button nz-button nz-dropdown [nzDropdownMenu]="menu" nzPlacement="bottomRight" nzShape="round" class="menu-button">
+    <button nz-button nz-dropdown [nzDropdownMenu]="menu" nzPlacement="bottomRight" nzShape="round" class="menu-button"
+        nzSize="large">
         <i nz-icon nzType="menu" nzTheme="outline"></i>
         <nz-avatar nzIcon="user" style="background-color:#47A359;"></nz-avatar>
     </button>
