--- a/src/app/theme/shared/components/product-item/product-item.component.html
+++ b/src/app/theme/shared/components/product-item/product-item.component.html
@@ -5,8 +5,10 @@
             <nz-statistic [nzValue]="((product.sku %1000) | number: '1.0-2')!" [nzTitle]="'Price'" [nzPrefix]="'$'"
                 [nzValueStyle]="{ fontSize: '1rem' }">
             </nz-statistic>
-            <button nz-button nzType="default" nzShape="round" (click)="handleAddProduct(product)">Add to
-                cart</button>
+            <nz-badge [nzCount]="(quantity$ | async) || 0" style="margin-right: 24px;">
+                <button nz-button nzType="default" nzShape="round" (click)="handleAddProduct(product)">Add to
+                    cart</button>
+            </nz-badge>
         </div>
         <ng-template #coverTemplate>
             <img [alt]="product.nombre" style="border-radius: 10%;" nz-image
