--- a/src/app/theme/shared/components/cart-list/cart-list.component.html
+++ b/src/app/theme/shared/components/cart-list/cart-list.component.html
@@ -1,4 +1,4 @@
-<nz-table #nzTable [nzData]="(products | async) || []" nzTableLayout="fixed">
+<nz-table #nzTable [nzData]="products" nzTableLayout="fixed">
     <thead>
         <tr>
             <th *ngFor="let column of listOfColumns">
