--- a/src/app/theme/layout/shopping/shopping.component.html
+++ b/src/app/theme/layout/shopping/shopping.component.html
@@ -7,5 +7,5 @@
             <router-outlet></router-outlet>
         </div>
     </nz-content>
-    <nz-footer>Ant Design ©2020 Implement By Angular</nz-footer>
+    <!-- <nz-footer>Ant Design ©2020 Implement By Angular</nz-footer> -->
 </nz-layout>
