--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,8 @@
 }
 
 // TODO ajustar scroll
+// TODO ajustar wellcome small devices
+// TODO: loading
 
 .ant-steps-item-icon .ant-steps-icon {
   color: #47a359;
