--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,4 +1,12 @@
 <nz-back-top></nz-back-top>
+<ng-container *ngIf="products.length == 0">
+    <nz-space nzSize="middle">
+        <nz-skeleton-element nzType="image" [nzActive]="true"></nz-skeleton-element>
+    </nz-space>
+    <nz-skeleton [nzActive]="true"></nz-skeleton>
+</ng-container>
+
+
 <nz-list nzItemLayout="vertical" [nzLoading]="!products" nzGrid>
     <div nz-row [nzGutter]="16" style="justify-content: space-around;">
         <div nz-col [nzXXl]="4" [nzXl]="5" [nzLg]="6" [nzMd]="8" [nzSm]="12" [nzXs]="24"
