--- a/src/app/pages/welcome/welcome.component.scss
+++ b/src/app/pages/welcome/welcome.component.scss
@@ -1,1 +1,22 @@
+.search {
+  background: #fafafa;
+  border-radius: 1rem;
+  margin-bottom: 1rem;
 
+  input {
+    background: #fafafa;
+    color: #c3c3c4;
+    font-size: large;
+    padding: 0 1rem;
+  }
+
+  .ant-input-prefix {
+    color: #c3c3c4;
+  }
+
+  .ant-input-suffix {
+    i {
+      font-size: 1rem;
+    }
+  }
+}
