--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -5,7 +5,7 @@
         <input type="text" nz-input placeholder="Buscar" [(ngModel)]="inputValue" />
     </nz-input-group>
     <ng-template #suffixIconSearch>
-        <i nz-icon nzType="search"></i>
+        <i nz-icon nzType="search" class="search-icon"></i>
     </ng-template>
     <ng-template #inputClearTpl>
         <i nz-icon class="ant-input-clear-icon" nzTheme="fill" nzType="close-circle" *ngIf="inputValue"
@@ -22,7 +22,7 @@
 
     <div nz-row [nzGutter]="16" style="justify-content: space-around;">
         <div nz-col [nzXXl]="4" [nzXl]="5" [nzLg]="6" [nzMd]="8" [nzSm]="12" [nzXs]="24"
-            *ngFor="let product of products; trackBy: trackByFn">
+            *ngFor="let product of (products | filterProducts:inputValue); trackBy: trackByFn">
             <nz-list-item>
                 <app-product-item [product]="product"></app-product-item>
             </nz-list-item>
