--- a/src/app/pages/welcome/welcome.component.scss
+++ b/src/app/pages/welcome/welcome.component.scss
@@ -9,14 +9,10 @@
     font-size: large;
     padding: 0 1rem;
   }
-
-  .ant-input-prefix {
+  .search-icon {
     color: #c3c3c4;
   }
-
-  .ant-input-suffix {
-    i {
-      font-size: 1rem;
-    }
+  .ant-input-clear-icon {
+    font-size: 1rem;
   }
 }
