--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,6 +1,7 @@
 <nz-back-top></nz-back-top>
 
-<nz-list nzItemLayout="vertical" [nzLoading]="products.length == 0" nzGrid>
+<nz-list nzItemLayout="vertical" [nzLoading]="products.length == 0" nzGrid
+    [nzDataSource]="(products | filterProducts:inputValue)">
     <nz-input-group [nzPrefix]="suffixIconSearch" [nzSuffix]="inputClearTpl" [nzSize]="'large'" class="search">
         <input type="text" nz-input placeholder="Buscar" [(ngModel)]="inputValue" />
     </nz-input-group>
@@ -21,11 +22,12 @@
 
 
     <div nz-row [nzGutter]="16" style="justify-content: space-around;">
-        <div nz-col [nzXXl]="4" [nzXl]="5" [nzLg]="6" [nzMd]="8" [nzSm]="12" [nzXs]="24"
-            *ngFor="let product of (products | filterProducts:inputValue); trackBy: trackByFn">
-            <nz-list-item>
-                <app-product-item [product]="product"></app-product-item>
-            </nz-list-item>
-        </div>
+        <ng-container *ngFor="let product of (products | filterProducts:inputValue); trackBy: trackByFn">
+            <div nz-col [nzXXl]="4" [nzXl]="5" [nzLg]="6" [nzMd]="8" [nzSm]="12" [nzXs]="24">
+                <nz-list-item>
+                    <app-product-item [product]="product"></app-product-item>
+                </nz-list-item>
+            </div>
+        </ng-container>
     </div>
 </nz-list>
