--- a/src/app/theme/shared/components/product-item/product-item.component.scss
+++ b/src/app/theme/shared/components/product-item/product-item.component.scss
@@ -1,9 +1,10 @@
-.ant-card-body {
-  overflow: hidden;
+nz-card {
+  cursor: default;
+  border-radius: 10%;
 }
 
-.ant-card-cover {
-  position: relative;
+.ant-card-body {
+  overflow: hidden;
 }
 
 .price_section {
