--- a/src/app/theme/shared/components/payment/payment.component.html
+++ b/src/app/theme/shared/components/payment/payment.component.html
@@ -3,8 +3,8 @@
         [nzValueStyle]="{color: '#47a359'}">
     </nz-statistic>
     <nz-divider></nz-divider>
-    <nz-statistic [nzValue]="user?.email" [nzTitle]="'Cliente'"></nz-statistic>
-    <nz-statistic [nzValue]="cart?.id" [nzTitle]="'Orden número'"></nz-statistic>
+    <nz-statistic [nzValue]="user?.email" [nzTitle]="'Cliente'" [nzValueStyle]="{fontSize: '1.1rem'}"></nz-statistic>
+    <nz-statistic [nzValue]="cart?.id" [nzTitle]="'Orden número'" [nzValueStyle]="{fontSize: '1.1rem'}"></nz-statistic>
     <nz-divider></nz-divider>
     <div nz-row>
         <div nz-col nzSpan="12" style="text-align:left">
